# fabric-q-and-a-tool

./: .gitignore  CLAUDE.md  README.md  Test_reranker.ipynb  app.py  config.py  create_databases.ipynb  fabric_ai_helper.py  pyproject.toml  rag_pipeline.py  requirements.txt  response.py  response_with_reranker.py  test_reranker.ipynb  verify_openai_key.py
configs/test_configs/: baseline.yaml  code_gen_baseline.yaml  gpt4o_test.yaml  improved_qa_prompt.yaml  improved_qa_prompt_llama3.3_70b.yaml  improved_qa_prompt_phi3.yaml  num_docs_comparison.yaml  ollama_llama.yaml
notebooks/: README.md
notebooks/02_vectordb_creation/: create_code_databases.ipynb  create_qa_databases.ipynb
notebooks/03_analysis/: analyze_vectordb.ipynb
notebooks/04_testing/: README.md  compare_configs.template.ipynb  similarity_test.ipynb  single_config_test.template.ipynb
tests/: test_imports.py
utils/: compat.py  logging_setup.py
utils/helpers/: assign_params.py  initialize_dependencies.py  print_helpers.py  rerank_helpers.py  validate_api_call.py
utils/testing/: __init__.py  single_config_test.py  test_api.py  test_helpers.py  yaml_config_loader.py
